k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patvin-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patvin
      component: api
  template:
    metadata:
      labels:
        app: patvin
        component: api
    spec:
      imagePullSecrets:
      - name: patvin-registry
      containers:
      - name: patvin-api
        image: image
        ports:
        - containerPort: 3000
