k8s/api-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: patvin-api-clusterip
spec:
  selector:
    app: patvin
    component: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
